tests/snapshots/preview__preview_window_up@001.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\"]\noptions: --preview printf \"=%.0s\\n\" $(seq 1 1000) --preview-window up"
---
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"=                                                                               "
"────────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> a                                                                             "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
