tests/snapshots/preview__preview_wrap.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"a        │                                                                      "
"bbbbbbbb │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │> x                                                                   "
"         │  1/1                                                              0/0"
"         │>                                                                     "
cursor: (24, 13)
