tests/snapshots/preview__preview_wrap@001.snap
---
source: tests/preview.rs
description: "input: items [\"x\"]\noptions: --preview echo a      bbbbbbbb --preview-window left:10:wrap"
---
"a        │                                                                      "
"bbbbbbbb │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │                                                                      "
"         │> x                                                                   "
"         │  1/1                                                              0/0"
"         │>                                                                     "
cursor: (24, 13)
